[gd_scene load_steps=8 format=2]

[ext_resource path="res://rsc/steve/Steve.tscn" type="PackedScene" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://assets/Montserrat-BoldItalic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://rsc/main/Main.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1744, 8 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[node name="Main" type="Node"]
script = ExtResource( 4 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
position = Vector2( 1352, 528 )
scale = Vector2( 7.53955, 0.0513402 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 528, 528 )
shape = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="StaticBody2D"]
margin_right = 274.0
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JumpForce" type="Label" parent="StaticBody2D/VBoxContainer"]
margin_right = 274.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 2 )
text = "Jump force: 700"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jumps" type="Label" parent="StaticBody2D/VBoxContainer"]
margin_top = 25.0
margin_right = 274.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
text = "Jumps: 2"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoreJumpForce" type="Button" parent="StaticBody2D/VBoxContainer"]
margin_top = 50.0
margin_right = 274.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 3 )
text = "+ Jump force (higher)"

[node name="MinusJumpForce" type="Button" parent="StaticBody2D/VBoxContainer"]
margin_top = 81.0
margin_right = 274.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 3 )
text = "- Jump force (lower)"

[node name="MoreJumps" type="Button" parent="StaticBody2D/VBoxContainer"]
margin_top = 112.0
margin_right = 274.0
margin_bottom = 139.0
custom_fonts/font = SubResource( 3 )
text = "+ Jumps (available)"

[node name="MinusJumps" type="Button" parent="StaticBody2D/VBoxContainer"]
margin_top = 143.0
margin_right = 274.0
margin_bottom = 170.0
custom_fonts/font = SubResource( 3 )
text = "- Jumps (available)"

[node name="Jumps2" type="Label" parent="StaticBody2D/VBoxContainer"]
margin_top = 174.0
margin_right = 274.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 2 )
text = "\"R\" to restart"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Steve" parent="." instance=ExtResource( 1 )]
position = Vector2( 423.333, 143.631 )

[node name="Camera2D" type="Camera2D" parent="Steve"]
position = Vector2( -548.068, -535.861 )
scale = Vector2( 1.5, 1.5 )
anchor_mode = 0
current = true
zoom = Vector2( 1.3, 1.3 )

[connection signal="pressed" from="StaticBody2D/VBoxContainer/MoreJumpForce" to="." method="_on_MoreJumpForce_pressed"]
[connection signal="pressed" from="StaticBody2D/VBoxContainer/MinusJumpForce" to="." method="_on_MinusJumpForce_pressed"]
[connection signal="pressed" from="StaticBody2D/VBoxContainer/MoreJumps" to="." method="_on_MoreJumps_pressed"]
[connection signal="pressed" from="StaticBody2D/VBoxContainer/MinusJumps" to="." method="_on_MinusJumps_pressed"]
